get_bot_trade move from bot to trade
